@@ -110,7 +110,7 @@ main(int argc, char **argv)
 	char local[PATH_MAX], home[PATH_MAX], path[PATH_MAX];
 	char *homedir, *cell, *principal, *pathdir, *strategy;
 	int i, j, try_v5_2b_only, try_rxk5_only, cells, process_options;
-	int methods[8];
+	int try_null_afs_first = 0, methods[8];
 	krb5_context ctx;
 	krb5_ccache ccache;
 	uid_t uid;
@@ -173,6 +173,9 @@ main(int argc, char **argv)
 			case 'k':
 				try_rxk5_only = !try_rxk5_only;
 				break;
+			case 'n':
+				try_null_afs_first = !try_null_afs_first;
+				break;
 			case 'v':
 				break;
 			case 'p':
@@ -207,8 +210,9 @@ main(int argc, char **argv)
 				strategy = argv[i];
 				break;
 			default:
-				printf("%s: [ [-v] [-5] [-k] [-s strategy] "
-				       "[-p path] [cell[=principal]] ] [...]\n",
+				printf("%s: [ [-v] [-5] [-k] [-n] "
+				       "[-s strategy] [-p path] "
+				       "[cell[=principal]] ] [...]\n",
 				       argv[0]);
 				krb5_free_context(ctx);
 				exit(0);
