@@ -43,6 +43,7 @@ struct _pam_krb5_options {
 	int forwardable;
 	int ignore_afs;
 	int ignore_unknown_principals;
+	int null_afs_first;
 	int proxiable;
 	int renewable;
 	int tokens;
