@@ -1,4 +1,4 @@
-.TH pam_krb5 8 2007/12/04 "@OS_DISTRIBUTION@" "System Administrator's Manual"
+.TH pam_krb5 8 2008/03/03 "@OS_DISTRIBUTION@" "System Administrator's Manual"
 
 .SH NAME
 pam_krb5 \- Kerberos 5 authentication
@@ -168,6 +168,13 @@ remote users who may not have local access.  Note that such a server should
 have an encrypted connection with its client in order to avoid allowing the
 user's password to be eavesdropped.
 
+@MAN_AFS@.IP null_afs
+@MAN_AFS@tells pam_krb5.so, when it attempts to set tokens, to try to get
+@MAN_AFS@credentials for services with names which resemble afs@\fIREALM\fR
+@MAN_AFS@before attempting to get credentials for services with names resembling
+@MAN_AFS@afs/\fIcell\fR@\fIREALM\fR.  The default is to assume that the cell's
+@MAN_AFS@name is the instance in the AFS service's Kerberos principal name.
+@MAN_AFS@
 @MAN_HPKINIT@.IP pkinit_flags=[0]
 @MAN_HPKINIT@controls the flags value which pam_krb5 passes to libkrb5
 @MAN_HPKINIT@when setting up PKINIT parameters.  This is useful mainly for
